# x0tta6bl4

./: .README.md  .bumpversion.cfg  .copilot.yaml  .coverage.aggregated  .coveragerc  .cursorrules  .dockerignore  .dockerignore.ghost-pulse  .env.development  .env.example  .env.ide  .env.production  .frontmatter_template.yaml  .gitattributes  .gitignore  .gitlab-ci.yml  .gitlab-ci.yml.ebpf  .gitmodules  .kilocodemodes  .kilocoderules  .mutmut.ini  .pre-commit-config.yaml  .windsurfrules  00_READ_ME_FIRST.txt  2026_YEAR_COMPLETE.md  404.html  =0.30  =0.46.2  =5.6.4  ACHIEVEMENTS_DEC_28.md  ACKNOWLEDGMENT_DEC_28.md  ACTION_NOW_COMMERCIALIZATION.md  ACTION_PLAN_14DAYS.md  ACTION_PLAN_JAN_5_2026.md  ACTION_PLAN_JAN_5_6.md  ACTION_PLAN_NOW.md  AGENTS.md  AGENT_SYNC_INSTRUCTIONS.md  AI-DECLARATION.md  ALL_P0_P1_COMPLETE.md  (+746 more)
.agent-coord/: log.jsonl  state.json
.gemini/: state_snapshot.xml
.githooks/: post-commit  pre-commit
.github/: PULL_REQUEST_TEMPLATE.md  copilot-instructions.md  dependabot.yml
.prompts/: README.md  ebpf-dataplane.md  mape-k-self-healing.md  plan-gate.md  pqc-integration.md  prompt-auditor.md  ztcr-chaos.md
.x0tta6bl4/: EXPERT_EVALUATION_SUMMARY_2026.md  PROJECT_ROADMAPS_ANALYSIS_2026.md  security-audit-2026-01-26.md
.zencoder/: ACTION_SUMMARY.md  ANALYSIS_INDEX.md  ARCHITECTURE_ANALYSIS.md  AUDIT_FINDINGS.md  AUDIT_INDEX.txt  AUDIT_REPORT_2026_01_17.md  AUDIT_SUMMARY.md  CLEANUP_RESULTS.md  DOWNLOADS_FOLDER_ANALYSIS.md  DPI_EVASION_ADVANCED.md  LATEST_ACHIEVEMENTS.md  P0_EBPF_CI_CD_COMPLETE.md  P0_FINAL_STATUS.md  P0_MTLS_VALIDATION_COMPLETE.md  P0_SECURITY_SCANNING_COMPLETE.md  P0_SPIFFE_INTEGRATION_COMPLETE.md  P0_STAGING_K8S_COMPLETE.md  P0_STATUS_SUMMARY.md  P1_FINAL_STATUS.md  P1_MAPE_K_TUNING_COMPLETE.md  P1_OPENTELEMETRY_TRACING_COMPLETE.md  P1_PROGRESS_VISUAL.txt  P1_PROMETHEUS_METRICS_COMPLETE.md  P1_RAG_HNSW_OPTIMIZATION_COMPLETE.md  P1_STATUS_COMPREHENSIVE.md  PHASE4_EXECUTION_LOG.md  PHASE4_PERFORMANCE_BASELINE.md  PHASE4_PRODUCTION_READINESS_FINAL.md  PHASE4_REALISTIC_PLAN.md  PHASE4_WEEK2_EXECUTION.md  PHASE4_WEEK3_COMPLETION.md  PHASE4_WEEK3_DEPLOYMENT.md  PHASE4_WEEK4_COMPLETION_SUMMARY.md  PHASE4_WEEK4_DISASTER_RECOVERY.md  PHASE4_WEEK4_FINAL_ASSESSMENT.md  PHASE4_WEEK4_INTEGRATION_TESTS.md  PHASE4_WEEK4_PRODUCTION_SIGN_OFF.md  PHASE4_WEEK4_TEST_RESULTS_FINAL.md  PHASE4_WEEK4_VALIDATION_SCRIPT.sh  PHASE4_WEEK5_TESTING_ENHANCEMENTS.md  (+23 more)
3d-generator-app/: ai_gen.py  colab_hunyuan3d.ipynb  generators.py  main.py  run.sh
ROADMAP_legacy/: README.md
System Volume Information/: IndexerVolumeGuid
WEB3_GO_TO_MARKET/: 00_ACTION_TODAY.md  01_TARGET_LIST.md  02_EMAIL_TEMPLATES.md  03_CRM_TRACKER.md  04_DEMO_SCRIPT.md  05_LINKEDIN_OUTREACH.md  06_EMAIL_TRACKER.csv  07_DEMO_ENVIRONMENT.md  08_AUTOMATION_SCRIPTS.md  09_READY_CHECKLIST.md  LINUX_DOCS_INDEX.md  LINUX_DOCS_SUMMARY.md  LINUX_FAQ.md  LINUX_ONE_PAGER.md  LINUX_QUICK_REFERENCE.md  READY_TO_SEND_EMAILS.md  UNIQUE_VALUE_PROPOSITION_LINUX.md
agent/: .golangci.yml  Makefile  go.mod  go.sum  integration_test.go  main.go  main_test.go  mesh_pqc_integration_test.go  spiffe_integration_test.go
alembic/: env.py
alertmanager/: config-test.yml
ansible/: bulk_flash.yml
anti-geolocation-system/: ANTI_GEOLOCATION_HARDENING_GUIDE.md  README.md
archive/: ARCHITECTURE.md  README.md
argocd/: app-of-apps.yaml  application.yaml
backend/: package.json
backups/: config_backup_20251227_075224.json
benchmarks/: README.md  anomaly_detection_results.json  benchmark_anomaly_detection.py  benchmark_competitive_self_healing.py  benchmark_comprehensive.py  benchmark_graphsage_comprehensive.py  benchmark_graphsage_validation.py  benchmark_knowledge_storage.py  benchmark_mape_k_tuning.py  benchmark_pqc.py  benchmark_rag_optimization.py  ci_benchmark_integration.py  edge_computing_benchmark.py  enhanced_load_test.py  event_sourcing_benchmark.py  generate_baseline_report.py  k6_baseline_load_test.js  mapek_load_test.py  mesh_persistence_benchmark.py  pqc_encryption_benchmark.py  python_load_test.py
business/: BUSINESS_PLAN_5_YEAR.md  DISTRIBUTED_AI_OPPORTUNITY.md  FUNDING_OPPORTUNITIES.md  INVESTOR_PITCH.md  RU_BUSINESS_PLAN.md  RU_DISTRIBUTED_AI.md  RU_FUNDING.md  RU_INVESTOR_PITCH.md
chaos/: README.md  advanced_chaos_scenarios.py  docker_compose_chaos_tests.py  latency-injection.yaml  network-delay.yaml  network-partition.yaml  node-kill.yaml  partition-50pct.yaml
chaos-mesh/: CHAOS_MESH_DESIGN.md
config/: alert_rules.yml  chaos_agent.json  crdt_sync.yaml  dao_policy.json  graphsage-model.yaml  mape_k_config.yaml  mesh-node.yaml  production_v3.yaml  prometheus-phase4.yml  prometheus.yaml  raft_production.yaml  recovery_actions.yaml  zero_trust.yaml
contracts/: MeshDAO.sol  TopologyAttester.sol  Voting.sol  X0TToken.sol
cors-proxy/: Dockerfile  package.json  proxy.js
dao/: attestation.go  proposal-handler.go
dashboard/: agentic_harness_dashboard.html  kimi_k25_integration_dashboard.html  mesh_mapek_dashboard.html  server.py
dashboards/: ebpf_metrics_dashboard.json
db/: alembic.ini
demo/: chaos-recovery-demo.sh  investor-demo.sh  live-dashboard.sh  sla-proof.sh  video-script.md
demos/: chaos_resilience.py  complete_v3_demo.py  stego_mesh_test.py
deploy/: Dockerfile.mesh-node  docker-compose.yml  env.bot.example  final_monitor.sh  preflight-check.sh  prometheus-node.yml  prometheus-testnet.yml  quickstart.sh  run-chaos-tests.sh  ОТЧЕТ_ДЕПЛОЯ.md
deploy_ghost/: Dockerfile  docker-compose.yml  ghost_pulse_vpn.py
deployment/: check_brain_health.sh  check_dynamic_mesh.sh  check_mesh_health.sh  check_web.sh  dashboard_v2.html  dashboard_v2_debug.html  dashboard_v2_smart.html  deploy_3_nodes.sh  deploy_dynamic.sh  deploy_landing_final.sh  (+33 more)
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/debian/: postinst  prerm
src-tauri/runtime/: desktop_core_api.py  desktop_mesh_runtime.py  start_full_core_api.sh  test_desktop_core_api_unit.py
src-tauri/src/: main.rs
src-tauri/systemd/: x0tta6bl4-core-api.service  x0tta6bl4-full-core-api.service
(+8699 files in other folders)
