[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "x0tta6bl4"
version = "1.0.0"
description = "Decentralized self-healing mesh network with Zero Trust security"
readme = "README.md"
requires-python = ">=3.12"
license = {text = "MIT"}
authors = [
    {name = "x0tta6bl4 Team", email = "team@x0tta6bl4.dev"}
]
keywords = [
    "mesh-network",
    "zero-trust",
    "self-healing",
    "decentralized",
    "MAPE-K",
    "federated-learning",
    "batman-adv",
    "spiffe",
    "spire"
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.12",
    "Topic :: System :: Networking",
    "Topic :: Security"
]

dependencies = [
    # Web Framework
    "fastapi>=0.119.1",
    "uvicorn[standard]>=0.38.0",
    "starlette>=0.48.0",
    "pydantic>=2.12.3",
    "python-multipart>=0.0.20",
    
    # HTTP Clients
    "httpx>=0.28.1",
    "aiohttp>=3.11.12",
    "requests>=2.32.3",
    
    # Observability
    "prometheus-client>=0.23.1",
    "opentelemetry-sdk>=1.38.0",
    "opentelemetry-api>=1.38.0",
    "structlog>=25.4.0",
    
    # Security
    "cryptography>=46.0.3",
    "python-jose[cryptography]>=3.3.0",
    "pyjwt>=2.10.1",
    "bcrypt>=4.3.0",
    
    # Utilities
    "pyyaml>=6.0.2",
    "python-dotenv>=1.0.1",
    "click>=8.1.8"
]

[project.optional-dependencies]
ml = [
    # PyTorch (heavy dependency ~2-3 GB)
    "torch>=2.9.0",
    "transformers>=4.57.1",
    "sentence-transformers>=5.1.2",
    "scikit-learn>=1.6.1",
    "pandas>=2.2.3",
    "numpy>=2.2.2"
]

quantum = [
    # Quantum computing (experimental)
    "qiskit>=1.0.0",
    "cirq>=1.0.0"
]

monitoring = [
    # Enhanced monitoring
    "grafana-client>=3.5.0",
    "influxdb-client>=1.40.0"
]

security = [
    # SPIFFE / SPIRE integration SDK (optional)
    "spiffe>=0.2.2",
]

dev = [
    # Testing
    "pytest>=8.3.4",
    "pytest-asyncio>=0.25.2",
    "pytest-cov>=6.0.0",
    "pytest-mock>=3.14.0",
    
    # Code Quality
    "black>=24.10.0",
    "flake8>=7.1.2",
    "mypy>=1.14.1",
    "isort>=5.13.2",
    "bandit>=1.8.0",
    
    # Documentation
    "mkdocs>=1.6.1",
    "mkdocs-material>=9.5.51"
]

all = [
    "x0tta6bl4[ml,quantum,monitoring,security,dev]"
]

[project.scripts]
x0tta6bl4 = "src.cli:main"
x0tta6bl4-server = "src.core.app:main"
x0tta6bl4-health = "src.core.health:check_cli"

[project.urls]
Homepage = "https://github.com/x0tta6bl4/x0tta6bl4"
Documentation = "https://docs.x0tta6bl4.dev"
Repository = "https://github.com/x0tta6bl4/x0tta6bl4"
Changelog = "https://github.com/x0tta6bl4/x0tta6bl4/blob/main/CHANGELOG.md"

[tool.setuptools]
packages = {find = {where = ["."], include = ["src*"]}}

[tool.setuptools.package-data]
"*" = ["py.typed", "*.yaml", "*.json"]

[tool.black]
line-length = 100
target-version = ["py312"]
include = '\.pyi?$'

[tool.isort]
profile = "black"
line_length = 100

[tool.mypy]
python_version = "3.12"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = """
    --strict-markers
    --tb=short
    --cov=x0tta6bl4
    --cov-branch
    --cov-report=term-missing:skip-covered
    --cov-report=html
    --cov-report=xml
"""

[tool.coverage.run]
source = ["x0tta6bl4"]
omit = [
    "*/tests/*",
    "*/test_*.py"
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
    "class .*\\bProtocol\\):",
    "@(abc\\.)?abstractmethod"
]

[tool.bandit]
exclude_dirs = ["tests", "test_*.py"]
skips = ["B101", "B601"]
