[package]
name = "x0tta6bl4"
version = "0.1.0"
description = "x0tta6bl4 autonomous mesh desktop client"
authors = ["x0tta6bl4 Team"]
edition = "2021"

[build-dependencies]
tauri-build = { version = "2.5", features = [] }

[dependencies]
tauri = { version = "2.9", features = [] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[features]
default = [ "custom-protocol" ]
custom-protocol = [ "tauri/custom-protocol" ]
